--- a/xfy0618.html
+++ b/xfy0618.html
@@ -64,9 +64,9 @@ body
 {
     position:absolute;
     top:4vh;
-    left:65%;
+    left:55%;
     transform:translateX(-50%) rotate(3deg);
-    width:clamp(260px,80vw,680px);
+    width:clamp(260px,100vw,680px);
     aspect-ratio:3/2;
     perspective:1200px;
     transition:.8s ease;
@@ -88,9 +88,10 @@ body
 }
 
 /* Photo 容器 */
-#photo{
+#photo
+{
     position:absolute;
-    top:45vh;
+    top:35vh;
     left:35%;
     transform:translateX(-50%);
     width:clamp(220px,70vw,540px);
@@ -103,7 +104,8 @@ body
     transform:translateX(150%)!important;
     opacity:0;
 }
-#photoImg{
+#photoImg
+{
     width:80%;
     height:80%;
     object-fit:cover;
