--- a/xfy0618.html
+++ b/xfy0618.html
@@ -5,277 +5,296 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Letter &amp; Photo – Paint at Right</title>
 
+<!-- 音樂播放器 -->
+<audio id="bgm" loop>
+  <source src="bgm.mp3" type="audio/mpeg">
+</audio>
+<!-- 播放╱暫停按鈕 -->
+<img id="musicBtn" src="play.png" alt="播放/暫停">
+
 <style>
 *
 {
-    box-sizing:border-box;
-    margin:0;
-    padding:0;
+  box-sizing:border-box;
+  margin:0;
+  padding:0;
 }
 body
 {
-    background:url("background.png") center/cover no-repeat fixed;
-    height:100vh;
-    font-family:system-ui,"Helvetica Neue",sans-serif;
-    overflow:hidden;
+  background-image:url("background.png");
+  background-position:center;
+  background-size:cover;
+  background-repeat:no-repeat;
+
+  height:100vh;
+  font-family:system-ui,"Helvetica Neue",sans-serif;
+  overflow:hidden;
 }
 #stage
 {
-    position:relative;
-    width:100%;
-    height:100%;
+  position:relative;
+  width:100%;
+  height:100%;
 }
 .hidden
 {
-    display:none;
+  display:none;
 }
 
-/* 泡泡 (省略與前相同) */
+/* ===== 音樂按鈕 ===== */
+#musicBtn
+{
+  position:fixed;
+  top:1.5vh;
+  left:1.5vw;
+  width:clamp(40px,6vw,60px);
+  height:auto;
+  cursor:pointer;
+  z-index:20000;
+  user-select:none;
+}
+
+/* ===== 泡泡 ===== */
 #bubbleContainer
 {
-    position:absolute;
-    inset:0;
-    pointer-events:none;
-    z-index:10001;
+  position:fixed;
+  inset:0;
+  pointer-events:none;
+  overflow:hidden;
+  z-index:10001;
 }
 .bubble
 {
-    position:absolute;
-    bottom:-120px;
-    border-radius:50%;
-    animation:bubbleRise var(--rise) linear forwards;
+  position:absolute;
+  bottom:-120px;
+  border-radius:50%;
+  animation:bubbleRise var(--rise) linear forwards;
 }
 @keyframes bubbleRise
 {
-    0%
-    {
-        transform:translate(0,0) scale(var(--scaleS));
-        opacity:.9;
-    }
-    100%
-    {
-        transform:translate(var(--moveX),-120vh) scale(var(--scaleE));
-        opacity:0;
-    }
+  0%
+  {
+    transform:translate(0,0) scale(var(--scaleS));
+    opacity:.9;
+  }
+  100%
+  {
+    transform:translate(var(--moveX),-120vh) scale(var(--scaleE));
+    opacity:0;
+  }
 }
 
-/* Letter */
+/* ===== Letter ===== */
 #letterWrapper
 {
-    position:absolute;
-    top:4vh;
-    left:55%;
-    transform:translateX(-50%) rotate(3deg);
-    width:clamp(260px,100vw,680px);
-    aspect-ratio:3/2;
-    perspective:1200px;
-    transition:.8s ease;
-    z-index:2;
+  position:absolute;
+  top:4vh;
+  left:55%;
+  transform:translateX(-50%) rotate(3deg);
+  width:clamp(260px,100vw,680px);
+  aspect-ratio:3/2;
+  perspective:1200px;
+  transition:.8s ease;
+  z-index:2;
 }
 .offscreen-left
 {
-    transform:translateX(-150%) rotate(3deg)!important;
-    opacity:0;
+  transform:translateX(-150%) rotate(3deg)!important;
+  opacity:0;
 }
-.letterImg{
-    position:absolute;
-    inset:0;
-    width:100%;
-    height:100%;
-    object-fit:cover;
-    box-shadow:0 8px 20px rgba(0,0,0,.25);
-    pointer-events:none;
+.letterImg
+{
+  position:absolute;
+  inset:0;
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  box-shadow:0 8px 20px rgba(0,0,0,.25);
+  pointer-events:none;
 }
 
-/* Photo 容器 */
+/* ===== Photo ===== */
 #photo
 {
-    position:absolute;
-    top:35vh;
-    left:35%;
-    transform:translateX(-50%);
-    width:clamp(220px,70vw,540px);
-    aspect-ratio:4/3;
-    z-index:2;
-    transition:.8s ease;
+  position:absolute;
+  top:50vh;
+  left:35%;
+  transform:translateX(-50%);
+  width:clamp(220px,70vw,540px);
+  aspect-ratio:4/3;
+  z-index:2;
+  transition:.8s ease;
 }
 .offscreen-right
 {
-    transform:translateX(150%)!important;
-    opacity:0;
+  transform:translateX(150%)!important;
+  opacity:0;
 }
 #photoImg
 {
-    width:80%;
-    height:80%;
-    object-fit:cover;
-    transform:rotate(-6deg);
-    box-shadow:0 8px 20px rgba(0,0,0,.25);
-    transition:opacity .4s;
+  width:80%;
+  height:80%;
+  object-fit:cover;
+  transform:rotate(-6deg);
+  box-shadow:0 8px 20px rgba(0,0,0,.25);
+  transition:opacity .4s;
 }
 
-/* ★ Paint：photo 右側 (不旋轉) */
-#paint{
-    position:absolute;
-    top:65%;
-    left:110%;
-    transform:translateY(-50%);
-    width:48%;
-    height:auto;
-    cursor:pointer;user-select:none;
-    object-fit:contain;
-    z-index:3;
-    box-shadow:0 8px 20px rgba(0,0,0,.25);
+/* ===== Paint：photo 右側 ===== */
+#paint
+{
+  position:absolute;
+  top:65%;
+  left:110%;
+  transform:translateY(-50%);
+  width:48%;
+  height:auto;
+  cursor:pointer;
+  user-select:none;
+  object-fit:contain;
+  z-index:3;
+  box-shadow:0 8px 20px rgba(0,0,0,.25);
 }
-@keyframes paintPop{
+@keyframes paintPop
+{
   0%{transform:translateY(-50%) scale(1);}
   50%{transform:translateY(-50%) scale(1.25);}
   100%{transform:translateY(-50%) scale(1);}
 }
-.paint-pop{animation:paintPop .25s ease;}
+.paint-pop
+{
+  animation:paintPop .25s ease;
+}
 
 .navBtn
 {
-    position:absolute;
-    top:50%;
-    translate:0 -50%;
-    width:clamp(30px,7vw,64px);
-    height:clamp(45px,10vh,90px);
-    border:none;
-    background:transparent;
-    cursor:pointer;
-    padding:0;
+  position:absolute;
+  top:50%;
+  translate:0 -50%;
+  width:clamp(30px,7vw,64px);
+  height:clamp(45px,10vh,90px);
+  border:none;
+  background:transparent;
+  cursor:pointer;
+  padding:0;
 }
 #prevBtn
 {
-    left:-3vw;
-    z-index:9999;
+  left:-3vw;
+  z-index:9999;
 }
 #nextBtn
 {
-    right:-3vw;
-    z-index:9999;
+  right:-3vw;
+  z-index:9999;
 }
 .navBtn img
 {
-    width:100%;
-    height:100%;
-    object-fit:contain;
+  width:100%;
+  height:100%;
+  object-fit:contain;
 }
 
 @keyframes flip-forward-out
 {
-    0%
-    {
-        transform:rotate(0) scale(1);
-        opacity:1;
-    }
-    60%
-    {
-        transform:rotate(5deg) translate(-6%,10%) scale(.9);
-        opacity:.7;
-    }
-    100%
-    {
-        transform:rotate(5deg) translate(-6%,60%) scale(.9);
-        opacity:0;
-    }
+  0%
+  {
+    transform:rotate(0) scale(1);
+    opacity:1;
+  }
+  60%
+  {
+    transform:rotate(5deg) translate(-6%,10%) scale(.9);
+    opacity:.7;
+  }
+  100%
+  {
+    transform:rotate(5deg) translate(-6%,60%) scale(.9);
+    opacity:0;
+  }
 }
 @keyframes flip-back-in
 {
-    0%
-    {
-        transform:rotate(5deg) translate(-6%,60%) scale(.9);
-        opacity:0;
-    }
-    40%
-    {
-        transform:rotate(5deg) translate(-6%,10%) scale(.9);
-        opacity:.7;
-    }
-    100%
-    {
-        transform:rotate(0) scale(1);
-        opacity:1;
-    }
+  0%
+  {
+    transform:rotate(5deg) translate(-6%,60%) scale(.9);
+    opacity:0;
+  }
+  40%
+  {
+    transform:rotate(5deg) translate(-6%,10%) scale(.9);
+    opacity:.7;
+  }
+  100%
+  {
+    transform:rotate(0) scale(1);
+    opacity:1;
+  }
 }
 .flip-forward-out
 {
-    animation:flip-forward-out .55s ease-in forwards;
+  animation:flip-forward-out .55s ease-in forwards;
 }
-.flip-back-in   
+.flip-back-in
 {
-    animation:flip-back-in   .55s ease-out forwards;
+  animation:flip-back-in .55s ease-out forwards;
 }
 
-/* RWD 斷點 (與前相同) */
+/* ===== RWD 斷點 ===== */
 @media (max-width:600px)
 {
-    #letterWrapper
-    {
-        left:15%;
-        margin:6vh auto 0;
-        transform:rotate(3deg)!important;
-        width:80vw;
-    }
-    #photo
-    {
-        top:30%;
-        left:35%;
-        margin:4vh auto 0;
-        width:60vw;
-    }
-    #paint
-    {
-        width:45%;
-        left:90%;
-        top:45%;
-    }
-    .navBtn
-    {
-        width:40px;
-        height:60px;
-    }
-    #prevBtn
-    {
-        left:-3vw;
-    }
-    #nextBtn
-    {
-        right:-3vw;
-    }
+  #letterWrapper
+  {
+    left:15%;
+    margin:6vh auto 0;
+    transform:rotate(3deg)!important;
+    width:80vw;
+  }
+  #photo
+  {
+    top:30%;
+    left:35%;
+    margin:4vh auto 0;
+    width:60vw;
+  }
+  #paint
+  {
+    width:45%;
+    left:90%;
+    top:45%;
+  }
+  .navBtn
+  {
+    width:40px;
+    height:60px;
+  }
+  #prevBtn{left:-3vw;}
+  #nextBtn{right:-3vw;}
 }
 @media (min-width:601px) and (max-width:1024px)
 {
-    #letterWrapper
-    {
-        left:55%;
-        transform:translateX(-50%) rotate(3deg);
-        width:clamp(260px,80vw,720px);
-    }
-    #photo
-    {
-        top:40%;
-        left:40%;
-        transform:translateX(-50%);
-        width:clamp(220px,70vw,600px);
-    }
-    #paint
-    {
-        width:40%;
-        left:90%;
-        top:60%;
-    }
-    #prevBtn
-    {
-        left:-5vw;
-    }
-    #nextBtn
-    {
-        right:-5vw;
-    }
+  #letterWrapper
+  {
+    left:55%;
+    transform:translateX(-50%) rotate(3deg);
+    width:clamp(260px,80vw,720px);
+  }
+  #photo
+  {
+    top:40%;
+    left:40%;
+    transform:translateX(-50%);
+    width:clamp(220px,70vw,600px);
+  }
+  #paint
+  {
+    width:40%;
+    left:90%;
+    top:60%;
+  }
+  #prevBtn{left:-5vw;}
+  #nextBtn{right:-5vw;}
 }
-
 </style>
 </head>
 
@@ -297,50 +316,179 @@ body
 </div>
 
 <script>
-/* ===== Letter / Photo ===== */
-const TOTAL=4;let page=1;
-let front=document.getElementById("letterFront"),back=document.getElementById("letterBack");
-const letterWrap=document.getElementById("letterWrapper"),photoWrap=document.getElementById("photo"),
-      photo=document.getElementById("photoImg"),prev=document.getElementById("prevBtn"),next=document.getElementById("nextBtn"),
-      bubbleBox=document.getElementById("bubbleContainer"),paint=document.getElementById("paint");
-const swap=()=>[front,back]=[back,front];
-const fade=src=>{photo.style.opacity=0;setTimeout(()=>{photo.src=src;photo.style.opacity=1;},200);}
-const hideBtns=()=>{prev.classList.add('hidden');next.classList.add('hidden');};
-const updateBtns=()=>{prev.classList.toggle('hidden',page===1);next.classList.toggle('hidden',page===TOTAL);};
+/* ===== 音樂按鈕 ===== */
+const musicBtn = document.getElementById('musicBtn');
+const bgm      = document.getElementById('bgm');
+let   playing  = false;
 
-next.onclick=()=>{if(page>=TOTAL)return;hideBtns();const n=page+1;
-  back.src=`letter${n}.png`;back.style.visibility="visible";back.style.zIndex=0;front.style.zIndex=1;
-  front.classList.add("flip-forward-out");
-  front.addEventListener("animationend",function h(){front.classList.remove("flip-forward-out");front.style.visibility="hidden";front.removeEventListener("animationend",h);swap();page=n;updateBtns();},{once:true});
+musicBtn.onclick = () =>
+{
+  if(!playing)
+  {
+    bgm.play();
+    musicBtn.src = 'pause.png';
+    playing      = true;
+  }
+  else
+  {
+    bgm.pause();
+    musicBtn.src = 'play.png';
+    playing      = false;
+  }
+};
+
+/* ===== Letter / Photo ===== */
+const TOTAL = 5;
+let   page  = 1;
+
+let front = document.getElementById('letterFront');
+let back  = document.getElementById('letterBack');
+
+const letterWrap = document.getElementById('letterWrapper');
+const photoWrap  = document.getElementById('photo');
+const photo      = document.getElementById('photoImg');
+const prev       = document.getElementById('prevBtn');
+const next       = document.getElementById('nextBtn');
+const bubbleBox  = document.getElementById('bubbleContainer');
+const paint      = document.getElementById('paint');
+
+const swap = () => [front , back] = [back , front];
+
+const fade = src =>
+{
+  photo.style.opacity = 0;
+  setTimeout(() =>
+  {
+    photo.src          = src;
+    photo.style.opacity = 1;
+  }, 200);
+};
+
+const hideBtns = () =>
+{
+  prev.classList.add('hidden');
+  next.classList.add('hidden');
+};
+
+const updateBtns = () =>
+{
+  prev.classList.toggle('hidden', page === 1);
+  next.classList.toggle('hidden', page === TOTAL);
+};
+
+next.onclick = () =>
+{
+  if(page >= TOTAL) return;
+  hideBtns();
+  const n = page + 1;
+
+  back.src             = `letter${n}.png`;
+  back.style.visibility = 'visible';
+  back.style.zIndex     = 0;
+  front.style.zIndex    = 1;
+
+  front.classList.add('flip-forward-out');
+  front.addEventListener('animationend', function h()
+  {
+    front.classList.remove('flip-forward-out');
+    front.style.visibility = 'hidden';
+    front.removeEventListener('animationend', h);
+    swap();
+    page = n;
+    updateBtns();
+  }, { once : true });
+
   fade(`photo${n}.JPG`);
 };
-prev.onclick=()=>{if(page<=1)return;hideBtns();const n=page-1;
-  back.src=`letter${n}.png`;back.style.visibility="visible";back.style.zIndex=0;front.style.zIndex=1;
-  back.classList.add("flip-back-in");back.style.zIndex=2;
-  back.addEventListener("animationend",function h(){back.classList.remove("flip-back-in");front.style.visibility="hidden";back.removeEventListener("animationend",h);swap();page=n;updateBtns();},{once:true});
+
+prev.onclick = () =>
+{
+  if(page <= 1) return;
+  hideBtns();
+  const n = page - 1;
+
+  back.src             = `letter${n}.png`;
+  back.style.visibility = 'visible';
+  back.style.zIndex     = 0;
+  front.style.zIndex    = 1;
+
+  back.classList.add('flip-back-in');
+  back.style.zIndex = 2;
+
+  back.addEventListener('animationend', function h()
+  {
+    back.classList.remove('flip-back-in');
+    front.style.visibility = 'hidden';
+    back.removeEventListener('animationend', h);
+    swap();
+    page = n;
+    updateBtns();
+  }, { once : true });
+
   fade(`photo${n}.JPG`);
 };
-window.addEventListener("load",()=>setTimeout(()=>{letterWrap.classList.remove("offscreen-left");photoWrap.classList.remove("offscreen-right");updateBtns();},50));
+
+window.addEventListener('load', () =>
+{
+  setTimeout(() =>
+  {
+    letterWrap.classList.remove('offscreen-left');
+    photoWrap.classList.remove('offscreen-right');
+    updateBtns();
+  }, 50);
+});
 
 /* ===== 泡泡 ===== */
-function makeBubble(){
-  const b=document.createElement("span");b.className="bubble";
-  const size=30+Math.random()*70;b.style.width=b.style.height=size+"px";
-  const hue=Math.floor(Math.random()*360),sat=60+Math.random()*30,light=60+Math.random()*15,alpha=0.2+Math.random()*0.2;
-  b.style.background=`hsla(${hue},${sat}%,${light}%,${alpha})`;
-  b.style.left=Math.random()*100+"%";
-  const rise=5+Math.random()*8,scaleS=0.5+Math.random()*0.8,scaleE=scaleS+0.4,drift=(Math.random()*60-30)+"px";
-  b.style.setProperty("--rise",rise+"s");b.style.setProperty("--scaleS",scaleS);b.style.setProperty("--scaleE",scaleE);b.style.setProperty("--moveX",drift);
-  bubbleBox.appendChild(b);b.addEventListener("animationend",()=>b.remove());
+function makeBubble()
+{
+  const b = document.createElement('span');
+  b.className = 'bubble';
+
+  const size = 30 + Math.random() * 70;
+  b.style.width  = size + 'px';
+  b.style.height = size + 'px';
+
+  const hue   = Math.floor(Math.random() * 360);
+  const sat   = 60 + Math.random() * 30;
+  const light = 60 + Math.random() * 15;
+  const alpha = 0.2 + Math.random() * 0.2;
+  b.style.background = `hsla(${hue},${sat}%,${light}%,${alpha})`;
+
+  const maxLeft = window.innerWidth - size;
+  b.style.left  = (Math.random() * maxLeft) + 'px';
+
+  const rise    = 5 + Math.random() * 8;
+  const scaleS  = 0.5 + Math.random() * 0.8;
+  const scaleE  = scaleS + 0.4;
+  const drift   = (Math.random() * 60 - 30) + 'px';
+
+  b.style.setProperty('--rise',    rise   + 's');
+  b.style.setProperty('--scaleS',  scaleS);
+  b.style.setProperty('--scaleE',  scaleE);
+  b.style.setProperty('--moveX',   drift);
+
+  bubbleBox.appendChild(b);
+  b.addEventListener('animationend', () => b.remove());
 }
-setInterval(makeBubble,350);
+setInterval(makeBubble, 350);
 
 /* ===== Paint 隨機換圖 ===== */
-let paintIdx=1;
-paint.onclick=()=>{
-  let n;do{n=Math.floor(Math.random()*9)+1;}while(n===paintIdx);
-  paintIdx=n;paint.src=`paint${paintIdx}.png`;
-  paint.classList.remove("paint-pop");void paint.offsetWidth;paint.classList.add("paint-pop");
+let paintIdx = 1;
+
+paint.onclick = () =>
+{
+  let n;
+  do
+  {
+    n = Math.floor(Math.random() * 9) + 1;
+  }
+  while(n === paintIdx);
+
+  paintIdx      = n;
+  paint.src     = `paint${paintIdx}.png`;
+  paint.classList.remove('paint-pop');
+  void paint.offsetWidth;
+  paint.classList.add('paint-pop');
 };
 </script>
 </body>
