--- a/xfy0618.html
+++ b/xfy0618.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Letter &amp; Photo – Paint at Right</title>
+<title>謝富伃ㄉ生日卡片</title>
 
 <!-- ===== 音樂播放器 ===== -->
 <audio id="bgm" loop>
